[gd_scene load_steps=11 format=3 uid="uid://dc6qvqueaxtg5"]

[ext_resource type="Texture2D" uid="uid://7atwicmgcg13" path="res://assets/icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://d3hawd0jyt6va" path="res://scripts/entities/player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://d0gwk5vou5q8v" path="res://assets/progress-bar-circle.png" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://d2ivrkk7abily" path="res://scripts/entities/player/player_movement_component.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://dikpclbt0dsdn" path="res://scripts/entities/player/combat_action_manager.gd" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://bjr5kfwasj8fm" path="res://scripts/entities/player/radial_action_menu.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://82111y20ywov" path="res://scripts/entities/player/player_turn_handler.gd" id="7_fjrip"]
[ext_resource type="Script" uid="uid://dk6gtp8sgdegp" path="res://scripts/entities/player/player_ability_manager.gd" id="8_smehm"]
[ext_resource type="PackedScene" uid="uid://bxug4kq7dbng6" path="res://scenes/ui/ability_indicator.tscn" id="9_ur7pv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(123, 120)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_onrkg")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visibility_layer = 513
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -134.0
offset_right = 147.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.492795, 0.486535)
max_value = 10.0
step = 0.01
fill_mode = 4
texture_under = ExtResource("3_i3pqv")
texture_progress = ExtResource("3_i3pqv")
tint_under = Color(0.0980392, 0.0980392, 0.0980392, 0.627451)

[node name="PlayerMovementComponent" type="Node" parent="."]
script = ExtResource("4_dqkch")

[node name="CombatActionManager" type="Node" parent="."]
script = ExtResource("5_qlg0r")

[node name="PlayerTurnHandler" type="Node" parent="."]
script = ExtResource("7_fjrip")

[node name="PlayerAbilityManager" type="Node" parent="."]
script = ExtResource("8_smehm")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="UIContainer" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RadialActionMenu" type="Control" parent="UIContainer"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("6_tuyoq")

[node name="AbilityIndicator" parent="UIContainer" instance=ExtResource("9_ur7pv")]
offset_left = -786.0
offset_top = -412.0
offset_right = -722.0
offset_bottom = -348.0
